// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlashMessage /> mounts and unmounts children 1`] = `
Array [
  Array [
    "render",
  ],
  Array [
    "componentDidMount",
  ],
]
`;

exports[`<FlashMessage /> mounts and unmounts children 2`] = `
Array [
  Array [
    "render",
  ],
  Array [
    "componentDidMount",
  ],
  Array [
    "componentWillUnmount",
  ],
]
`;
